[gd_scene load_steps=6 format=3 uid="uid://da3mon2viisk0"]

[ext_resource type="Script" path="res://scenes/game/components/obstacle_num.gd" id="1_j5f15"]
[ext_resource type="Texture2D" uid="uid://majifcdsi8xh" path="res://assets/sprite_sheet.png" id="2_qgdxo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0vawe"]
atlas = ExtResource("2_qgdxo")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cil0l"]
atlas = ExtResource("2_qgdxo")
region = Rect2(0, 384, 128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_pl60v"]
radius = 16.0

[node name="ObstacleNum" type="Node2D" groups=["obstacle_num"]]
script = ExtResource("1_j5f15")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_0vawe")

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
show_behind_parent = true
position = Vector2(-8, 4)
texture = SubResource("AtlasTexture_cil0l")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -44.0
offset_right = 32.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.929412, 0.913725, 1)
theme_override_font_sizes/font_size = 96
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pl60v")
debug_color = Color(0.974968, 0.0549332, 0.380017, 0.42)

[node name="AkariCheckArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AkariCheckArea"]
position = Vector2(128, 0)
shape = SubResource("CircleShape2D_pl60v")
debug_color = Color(0.976471, 0.611765, 0.380392, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AkariCheckArea"]
position = Vector2(0, -128)
shape = SubResource("CircleShape2D_pl60v")
debug_color = Color(0.976471, 0.611765, 0.380392, 0.419608)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AkariCheckArea"]
position = Vector2(0, 128)
shape = SubResource("CircleShape2D_pl60v")
debug_color = Color(0.976471, 0.611765, 0.380392, 0.419608)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AkariCheckArea"]
position = Vector2(-128, 0)
shape = SubResource("CircleShape2D_pl60v")
debug_color = Color(0.976471, 0.611765, 0.380392, 0.419608)

[connection signal="area_entered" from="AkariCheckArea" to="." method="_on_akari_check_area_area_entered"]
[connection signal="area_exited" from="AkariCheckArea" to="." method="_on_akari_check_area_area_exited"]
